# rust-setup

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/: 20240101000000_create_users.sql
src/: main.rs
src/db/: mod.rs
src/handlers/: auth.rs  health.rs  users.rs
src/middleware/: auth.rs
src/models/: mod.rs
src/utils/: jwt.rs  logging.rs  mod.rs
