[package]
name = "rust-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "rust-api"
path = "src/main.rs"

[dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls", "macros", "uuid", "chrono"] }

# JWT Authentication
jsonwebtoken = "9"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-actix-web = "0.7"

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
dotenv = "0.15"
thiserror = "1"
anyhow = "1"
futures-util = "0.3.32"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
